# codebase-examiner

./: .gitignore  CLAUDE.md  README.md  SPEC.md  TODO.md  mkdocs.yml  pyproject.toml  pytest.ini
.codex/: setup.sh
.github/: copilot-instructions.md
.github/workflows/: python.yml
.junie/: guidelines.md
docs/: api-reference.md  architecture.md  extending.md  index.md
src/codebase_examiner/: __init__.py  cli.py  cli_spec.py  mcp.py  mcp_http.py  mcp_stdio.py  rpc.py  tools.py
src/codebase_examiner/commands/: __init__.py  base.py  base_spec.py  examine.py  examine_spec.py  serve.py  serve_spec.py
src/codebase_examiner/core/: __init__.py  code_inspector.py  code_inspector_spec.py  doc_generator.py  doc_generator_spec.py  examiner_tool.py  file_finder.py  file_finder_spec.py  filesystem_gateway.py  gitignore_parser.py  gitignore_parser_spec.py  models.py  registry.py  section_generators.py
src/codebase_examiner/core/extractors/: __init__.py  base.py  python_extractor.py
src/codebase_examiner/mcp/: mcp_http.py  mcp_stdio.py  rpc.py
src/codebase_examiner/python/: __init__.py  extractor.py
tests/: __init__.py  test_cli.py  test_mcp_http.py  test_mcp_stdio.py  test_rpc.py
tests/core/: __init__.py  test_code_inspector.py  test_doc_generator.py  test_file_finder.py
